@@ -164,6 +164,10 @@ CHANGE LOG
 =========================================================================
 Changes up to 0.88
 
+   * cartoon_highlight_color now provides Molscript-like cartoon coloring
+     which provides for an alternate color inside of helices and on the
+     sides of beta strands.
+
    * ray_interior_color can enable solid interiors in the ray tracer!
 
    * fixed truncation error in view matrix composition
